ready to vercel

--- a/game-maps.html
+++ b/game-maps.html
@@ -496,7 +496,7 @@
     <div class="content-wrapper">
         <header>
             <div class="header-nav">
-                <a href="info-dark.html">📋 Info</a>
+                <a href="index.html">📋 Info</a>
             </div>
             <img src="images/logos/logo.png" alt="Legion GT Logo" class="header-logo">
             
