--- a/index.html
+++ b/index.html
@@ -578,6 +578,10 @@
                 <div class="contact-box">
                     <p><strong>Adresa:</strong> U Soudu 531/9, 460 01 Liberec II</p>
                 </div>
+
+                <div style="margin-top: 30px; border-radius: 2px; overflow: hidden; border: 2px solid #0c72ed;">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2539.6747481851237!2d15.044938076825857!3d50.76188617175356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47099da89b13d55f%3A0x1234567890ab!2sU%20Soudu%20531%2F9%2C%20460%2001%20Liberec%20II!5e0!3m2!1scs!2scz!4v1673000000000" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </section>
 
             <!-- Parkování -->
